<resources>
    <string name="app_name">Employee Management System</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="page_title">Employee Profile</string>
    <string name="add_new_page_title">Add New Employee</string>
    <string name="update_employee_title">Update Employee</string>
    <string name="profile_image">Profile Image</string>
    <string name="initials_label">Initials</string>
    <string name="initials">SW</string>
    <string name="full_name_label">Full Name</string>
    <string name="full_name">Snow White</string>
    <string name="first_name_label">First Name</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="phone_number_label">Phone</string>
    <string name="phone_number">Phone Number: +614123456789</string>
    <string name="work_info_label">Work Information</string>
    <string name="email_label">Email</string>
    <string name="email">example@gmail.com</string>
    <string name="location_label">Location</string>
    <string name="location">Australia</string>
    <string name="position_label">Position</string>
    <string name="position">Current Position</string>
    <string name="department_label">Department</string>
    <string name="department">IT</string>
    <string name="manager_label">Report To</string>
    <string name="manager">Linh Vuu</string>
    <string name="date_hired_label">Date Hired</string>
    <string name="date_hired">DD/MM/YYYY</string>
    <string name="start_date_label">Start Date</string>
    <string name="start_date">DD/MM/YYYY</string>
    <string name="address_label">Address</string>
    <string name="address">Street Address</string>
    <string name="city_label">City</string>
    <string name="city">City, State</string>
    <string name="ongoing_employee_checkbox">On-going Employee</string>
    <string name="end_date_label">End Date</string>
    <string name="end_date">DD/MM/YYYY</string>
    <string name="latest_salary_label">Latest Salary</string>
    <string name="latest_salary">e.g 50.5</string>
    <string name="salary_format">%1$.2f AUD/hour</string>
    <string name="salary_unit">AUD/hour</string>
    <string name="add_employee">Add New</string>
    <string name="main_title">Employee List</string>
    <string name="note_required_fields">Note:\n\nAll fields are required, except "End Date".</string>
</resources>